[package]
name = "miden-confidential-contracts"
version = "0.0.1"
edition = "2024"
default-run = "miden-confidential-contracts"
rust-version = "1.90"

[dependencies]
miden-objects = "0.12.4"
miden-lib = "0.12.4"
miden-tx = "0.12.4"
miden-testing = "0.12.4"

miden-crypto = { version = "0.19.0", features = ["executable"] }
miden-client = "0.12.3"
miden-assembly = "0.19.1"
miden-processor = "0.19.1"

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
anyhow         = { default-features = false, features = ["backtrace", "std"], version = "1.0" }
assert_matches = { default-features = false, version = "1.5" }
rand           = { default-features = false, version = "0.9" }
rstest         = { version = "0.26" }
thiserror      = { default-features = false, version = "2.0" }
tokio          = { default-features = false, features = ["sync"], version = "1" }
rand_chacha = { default-features = false, version = "0.9" }